translation fix reported by Jordi Mallach.
2002-05-01  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (yelp_view_toc_start): translation fix
	  reported by Jordi Mallach.

2002-05-01  Mikael Hallendal  <micke@codefactory.se>

	* ca.po: added Catalan translation by Jordi Mallach.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-01  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c (yelp_view_toc_start): translation fix
+	  reported by Jordi Mallach.
+
 2002-04-29  Christophe Merlet  <christophe@merlet.net>
 
 	* src/Makefile.am: Added $(DESTDIR) variable.
