--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-01  Mikael Hallendal  <micke@codefactory.se>
+
+	* ca.po: added Catalan translation by Jordi Mallach.
+
 2002-04-30  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
@@ -86,7 +90,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-Aıivo Leedj‰rv  <toivo@linux.ee>$)B
+2002-04-11  T√µivo Leedj√§rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -147,7 +151,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-Aıivo Leedj‰rv <toivo@linux.ee>$)B
+2002-03-17  T√µivo Leedj√§rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -167,10 +171,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A·n Poo-CaamaÒo <gpoo@ubiobio.cl>$)B
+2002-03-06  Germ√°n Poo-Caama√±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-AÌa Molina <juanma_gm@wanadoo.es>$)B
+		Juan Manuel Garc√≠a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -192,7 +196,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -226,7 +230,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-Aıivo Leedj‰rv  <leedjarv@interest.ee>$)B
+2002-03-01  T√µivo Leedj√§rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -243,7 +247,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-Aıivo Leedj‰rv  <leedjarv@interest.ee>$)B
+2002-02-28  T√µivo Leedj√§rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -274,7 +278,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-Aˆrkem.$)B
+	* tr.po: Committed updated Turkish translation by G√∂rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -289,7 +293,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-Aıivo Leedj‰rv  <leedjarv@interest.ee>$)B
+2002-02-17  T√µivo Leedj√§rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -307,19 +311,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-AÛ MarÌn <carlos@gnome-db.org>$)B
+2002-02-04  Carlos Perell√≥ Mar√≠n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-AÌa Molina <juanma_gm@wanadoo.es>$)B
+	* es.po: Updated by Juan Manuel Garc√≠a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -341,7 +345,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -367,7 +371,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -404,7 +408,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -431,9 +435,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-Aˆrkem Cetin.$)B
+	* tr.po: Added Turkish translation by G√∂rkem Cetin.
 
-2002-01-06  Germ-A·n Poo-CaamaÒo <gpoo@ubiobio.cl>$)B
+2002-01-06  Germ√°n Poo-Caama√±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -451,7 +455,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Updated Norwegian (bokm√•l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -467,7 +471,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-AÂl) translation.$)B
+	* no.po: Added Norwegian (bokm√•l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -506,7 +510,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-AÛ MarÌn <carlos@gnome-db.org>$)B
+2001-12-04  Carlos Perell√≥ Mar√≠n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
