--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-01  Germán Poo-Caamaño  <gpoo@ubiobio.cl>
+
+	* es.po: Updated Spanish translation from
+	Juan Manuel García Molina <juanma_gm@wanadoo.es>
+
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
 	* ca.po: added Catalan translation by Jordi Mallach.
