--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-02  Jacob Berkman  <jacob@ximian.com>
+
+	* configure.in: bump version back to 0.6.99
+
 2002-05-01  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp-customization.xsl:	introduce css
