add 'About This Document' link, change toc to contents, change prev to
2002-05-02  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl: add 'About This Document' link,
	  change toc to contents, change prev to previous, fix whitespace in
	  itemized lists and variable lists

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-02  Sander Vesik <sander.vesik@sun.com>
+
+	* stylesheets/yelp-customization.xsl: add 'About This Document' link,
+	  change toc to contents, change prev to previous, fix whitespace in
+	  itemized lists and variable lists
+
 2002-05-02  Jacob Berkman  <jacob@ximian.com>
 
 	* configure.in: bump version back to 0.6.99
