--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-04  Sander Vesik <sander.vesik@sun.com>
+
+	* stylesheets/yelp-customization.xsl: remove non-linking Next >>>
+	  and change the codition that triggers table of contents in hopes
+	  it fixes the bug where it is not displayed
+
 2002-05-02  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp-customization.xsl: add 'About This Document' link,
