--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-05  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Updated Vietnamese file
+
 2002-05-01  Germán Poo-Caamaño  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
