--- a/po/pl.po
+++ b/po/pl.po
@@ -1,9 +1,9 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-# Aktualn± wersjê tego pliku mo¿esz odnale¼æ w repozytorium cvs.gnome.pl
-# (:pserver:anonymous@cvs.gnome.pl:/home/cvs, puste has³o)
-# Je¶li masz jakiekolwiek uwagi odnosz±ce siê do t³umaczenia lub chcesz
-# pomóc w jego rozwijaniu i pielêgnowaniu, napisz do nas na adres:
+# AktualnÄ… wersjÄ™ tego pliku moÅ¼esz odnaleÅºÄ‡ w repozytorium cvs.gnome.pl
+# (:pserver:anonymous@cvs.gnome.pl:/home/cvs, puste hasÅ‚o)
+# JeÅ›li masz jakiekolwiek uwagi odnoszÄ…ce siÄ™ do tÅ‚umaczenia lub chcesz
+# pomÃ³c w jego rozwijaniu i pielÄ™gnowaniu, napisz do nas na adres:
 # translators@gnome.pl
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/GNOME_Yelp.server.in.h:1
@@ -30,8 +30,8 @@ msgid ""
 "Error while parsing the stylesheet, make sure you have your docbook "
 "environment setup correctly."
 msgstr ""
-"Przy analizie arkusza stylów wyst±pi³ b³±d. Upewnij siê, ¿e zosta³o "
-"poprawnie ustawione ¶rodowisko docbooka."
+"Przy analizie arkusza stylÃ³w wystÄ…piÅ‚ bÅ‚Ä…d. Upewnij siÄ™, Å¼e zostaÅ‚o "
+"poprawnie ustawione Å›rodowisko docbooka."
 
 #: src/yelp-db2html.c:1
 #, c-format
@@ -41,11 +41,11 @@ msgstr "Dokument \"%s\" nie istnieje"
 #: src/yelp-db2html.c:1
 #, c-format
 msgid "Couldn't parse the document '%s'."
-msgstr "Przy analizie dokumentu \"%s\" wyst±pi³ b³±d."
+msgstr "Przy analizie dokumentu \"%s\" wystÄ…piÅ‚ bÅ‚Ä…d."
 
 #: src/yelp-db2html.c:1
 msgid "Error while applying the stylesheet."
-msgstr "B³±d przy zastosowywaniu arkusza stylów."
+msgstr "BÅ‚Ä…d przy zastosowywaniu arkusza stylÃ³w."
 
 #: src/yelp-html.c:1
 msgid "Loading..."
@@ -58,11 +58,11 @@ msgstr "info"
 #: src/yelp-main.c:1
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Nie mo¿na uaktywniæ Yelpa: \"%s\""
+msgstr "Nie moÅ¼na uaktywniÄ‡ Yelpa: \"%s\""
 
 #: src/yelp-main.c:1
 msgid "Could not open new window."
-msgstr "Nie mo¿na otworzyæ nowego okna."
+msgstr "Nie moÅ¼na otworzyÄ‡ nowego okna."
 
 #: src/yelp-man.c:1 src/yelp-man.c:1 src/yelp-man.c:1 src/yelp-man.c:1
 #: src/yelp-man.c:1 src/yelp-man.c:1
@@ -95,7 +95,7 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:1
 msgid "System Calls"
-msgstr "Wywo³ania systemowe"
+msgstr "WywoÅ‚ania systemowe"
 
 #: src/yelp-man.c:1
 msgid "Library Functions"
@@ -103,7 +103,7 @@ msgstr "Funkcje biblioteczne"
 
 #: src/yelp-man.c:1
 msgid "Kernel Routines"
-msgstr "Funkcje j±dra"
+msgstr "Funkcje jÄ…dra"
 
 #: src/yelp-man.c:1
 msgid "Applications"
@@ -115,7 +115,7 @@ msgstr "Programowanie"
 
 #: src/yelp-man.c:1
 msgid "Hardware Devices"
-msgstr "Urz±dzenia sprzêtowe"
+msgstr "UrzÄ…dzenia sprzÄ™towe"
 
 #: src/yelp-man.c:1
 msgid "Configuration Files"
@@ -143,15 +143,15 @@ msgstr "Sekcja"
 
 #: src/yelp-view-index.c:1
 msgid "Search for:"
-msgstr "Znajd¼:"
+msgstr "ZnajdÅº:"
 
 #: src/yelp-view-toc.c:1
 msgid "Help Contents"
-msgstr "Zawarto¶æ pomocy"
+msgstr "ZawartoÅ›Ä‡ pomocy"
 
 #: src/yelp-view-toc.c:1
 msgid "GNOME - Desktop"
-msgstr "GNOME - ¶rodowisko"
+msgstr "GNOME - Å›rodowisko"
 
 #: src/yelp-view-toc.c:1
 msgid "Additional documents"
@@ -159,7 +159,7 @@ msgstr "Dodatkowe dokumenty"
 
 #: src/yelp-view-toc.c:1 src/yelp-view-toc.c:1
 msgid "Manual Pages"
-msgstr "Strony podrêcznikowe"
+msgstr "Strony podrÄ™cznikowe"
 
 #: src/yelp-view-toc.c:1 src/yelp-view-toc.c:1
 msgid "Info Pages"
@@ -175,7 +175,7 @@ msgstr "Kategorie"
 
 #: src/yelp-view-toc.c:1
 msgid "Manual pages"
-msgstr "Strony podrêcznikowe"
+msgstr "Strony podrÄ™cznikowe"
 
 #: src/yelp-window.c:1
 msgid "/_File"
@@ -192,23 +192,23 @@ msgstr "/Plik/Za_mknij okno"
 #. {N_("/File/_Quit"),         NULL,         yw_exit_cb,         0,                           "<StockItem>", GTK_STOCK_QUIT    },
 #: src/yelp-window.c:1
 msgid "/_Go"
-msgstr "/P_rzej¶cie"
+msgstr "/P_rzejÅ›cie"
 
 #: src/yelp-window.c:1
 msgid "/Go/_Back"
-msgstr "/P_rzej¶cie/_Wstecz"
+msgstr "/P_rzejÅ›cie/_Wstecz"
 
 #: src/yelp-window.c:1
 msgid "/Go/_Forward"
-msgstr "/P_rzej¶cie/_Naprzód"
+msgstr "/P_rzejÅ›cie/_NaprzÃ³d"
 
 #: src/yelp-window.c:1
 msgid "/Go/_Home"
-msgstr "/P_rzej¶cie/P_ocz±tek"
+msgstr "/P_rzejÅ›cie/P_oczÄ…tek"
 
 #: src/yelp-window.c:1
 msgid "/Go/_Index"
-msgstr "/P_rzej¶cie/_Indeks"
+msgstr "/P_rzejÅ›cie/_Indeks"
 
 #: src/yelp-window.c:1
 msgid "/_Help"
@@ -220,7 +220,7 @@ msgstr "/Pomoc/_Informacje o"
 
 #: src/yelp-window.c:1
 msgid "Help Browser"
-msgstr "Przegl±darka pomocy"
+msgstr "PrzeglÄ…darka pomocy"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
@@ -230,7 +230,7 @@ msgstr "GNOME PL Team <translators@gnome.pl>"
 
 #: src/yelp-window.c:1
 msgid "Help Browser for GNOME 2.0"
-msgstr "Przegl±darka pomocy dla GNOME 2.0"
+msgstr "PrzeglÄ…darka pomocy dla GNOME 2.0"
 
 #: src/yelp-window.c:1
 msgid "Back"
@@ -238,23 +238,23 @@ msgstr "Wstecz"
 
 #: src/yelp-window.c:1
 msgid "Show previous page in history"
-msgstr "Wy¶wietla poprzedni± stronê z historii"
+msgstr "WyÅ›wietla poprzedniÄ… stronÄ™ z historii"
 
 #: src/yelp-window.c:1
 msgid "Forward"
-msgstr "Naprzód"
+msgstr "NaprzÃ³d"
 
 #: src/yelp-window.c:1
 msgid "Show next page in history"
-msgstr "Wy¶wietla nastêpn± stronê z historii"
+msgstr "WyÅ›wietla nastÄ™pnÄ… stronÄ™ z historii"
 
 #: src/yelp-window.c:1
 msgid "Home"
-msgstr "Pocz±tek"
+msgstr "PoczÄ…tek"
 
 #: src/yelp-window.c:1
 msgid "Go to home view"
-msgstr "Przechodzi do widoku pocz±tkowego"
+msgstr "Przechodzi do widoku poczÄ…tkowego"
 
 #: src/yelp-window.c:1
 msgid "Index"
