--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-06  Sander Vesik <sander.vesik@sun.com>
+
+        * stylesheets/yelp-customization.xsl: Initial multichunking code
+
 2002-05-05  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-uri.c (uri_get_doc_type): 
