--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-05-06  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.7
+	
+	* NEWS: updated for 0.7
+
+	* configure.in: bumped version to 0.7
+
 	* src/yelp-scrollkeeper.c:
 	- Fixes #80800
 	(ys_parse_index): silenced warning.
