--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 0.7:
+
+* Stylesheets improvement                       (Sander Vesik)
+* URI fixing, now fully support jrb's 
+  uri-scheme                                    (Mikael Hallendal)
+* Cleaned up the error-reporting on stdout      (Mikael Hallendal)
+* Bugfixes for the index-searching              (Mikael Hallendal)
+
 Changes in 0.6.1:
 -----------------
 
