--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-05-06  Mikael Hallendal  <micke@codefactory.se>
 
+	* NEWS: fixup
+
 	* configure.in (GNOMELOCALEDIR): updated libgtkhtml2 deps.
 
 	* Release 0.7
