- initial support for <part> - fix informaltable display - fix revhistory
2002-05-06  Sander Vesik  <sander.vesik@sun.com>

	* stylesheet/yelp-customization.xsl:
	- initial support for <part>
	- fix informaltable display
	- fix revhistory display
	- fix non-centering of 'Contents' in the footer navbar
	- fix display of copyright holders on title page
	- improvements to the Table of Contents page

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-05-06  Sander Vesik  <sander.vesik@sun.com>
+
+	* stylesheet/yelp-customization.xsl: 
+	- initial support for <part>
+	- fix informaltable display
+	- fix revhistory display
+	- fix non-centering of 'Contents' in the footer navbar
+	- fix display of copyright holders on title page
+	- improvements to the Table of Contents page
+
 2002-05-06  Mikael Hallendal  <micke@codefactory.se>
 
 	* NEWS: fixup
