--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-07  Christophe Merlet  <christophe@merlet.net>
+
+	* src/Makefile.am: Really add ??!! $(DESTDIR) variable.
+
 2002-05-07  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-section.c:
