--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-07  Christophe Merlet  <christophe@merlet.net>
+
+	* fr.po: Updated French translation.
+
 2002-05-07  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
