--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-17  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated translation.
+
 2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* vi.po: Updated Vietnamese file
