- renamed static functions to correspond to style.
2002-05-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-html.c:
	- renamed static functions to correspond to style.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-05-18  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-html.c: 
+	- renamed static functions to correspond to style.
+
 	* src/yelp-reader.h: 
 	- removed YelpReaderStatus.
 
