conform with style. same. same. same.
2002-05-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: conform with style.
	* src/yelp-window.c: same.
	* src/yelp-history.c: same.
	* src/yelp-scrollkeeper.c: same.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-05-18  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c: conform with style.
+	* src/yelp-window.c: same.
+	* src/yelp-history.c: same.
+	* src/yelp-scrollkeeper.c: same.
+
 	* src/yelp-view-index.c (yelp_view_index_show_uri): 
 	- commented out call to yelp_html_open_uri since it's been
 	  removed.
