--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-18  Richard Hult  <rhult@codefactory.se>
+
+	* src/yelp-window.c: Use stock item for about menu item. 
+
 2002-05-18  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c: conform with style.
