--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-19  Vlad Harchev  <hvv@hippo.ru>
+
+	* ru.po: updated russian translation from Dmitry G. Mastrukov
+	<dmitry@taurussoft.org>.
+
 2002-05-17  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated translation.
